# re-cmake

./: .gitignore  CMakeLists.txt  README.md  build45.py.in  main.cmake  re-cmake.py  re.bat.in  re.sh.in  re_cmake_build.h.in  sdk.cmake
.github/workflows/: compute-checksum.yml
cmake/: RECMakeAddTest.cmake  RECMakeFetchContent.cmake  RECMakeFetchGoogleTest.cmake  RECMakeOptions.cmake
re-logging/src/cpp/logging/: logging.h  loguru.cpp  loguru.hpp
test/cpp/re-logging/: TestLogging.cpp
